implement API changes for servers
