# nadiki_registrar/models/server_create.py
@@ -25,7 +25,7 @@ class ServerCreate(Model):
     Do not edit the class manually.
     """
 
-    def __init__(self, facility_id=None, rack_id=None, impact_assessment=None, rated_power=None, total_cpu_sockets=2, exptected_lifetime=3, installed_cpus=None, number_of_psus=2, total_installed_memory=None, number_of_memory_units=None, storage_devices=None, installed_gpus=None, installed_fpgas=None, product_passport=None, cooling_type='air', description=None):  # noqa: E501
+    def __init__(self, facility_id=None, rack_id=None, impact_assessment=None, rated_power=None, total_cpu_sockets=2, expected_lifetime=3, installed_cpus=None, number_of_psus=2, total_installed_memory=None, number_of_memory_units=None, storage_devices=None, installed_gpus=None, installed_fpgas=None, product_passport=None, cooling_type='air', description=None):  # noqa: E501
         """ServerCreate - a model defined in OpenAPI
 
         :param facility_id: The facility_id of this ServerCreate.  # noqa: E501
@@ -38,8 +38,8 @@ class ServerCreate(Model):
         :type rated_power: float
         :param total_cpu_sockets: The total_cpu_sockets of this ServerCreate.  # noqa: E501
         :type total_cpu_sockets: int
-        :param exptected_lifetime: The exptected_lifetime of this ServerCreate.  # noqa: E501
-        :type exptected_lifetime: int
+        :param expected_lifetime: The expected_lifetime of this ServerCreate.  # noqa: E501
+        :type expected_lifetime: int
         :param installed_cpus: The installed_cpus of this ServerCreate.  # noqa: E501
         :type installed_cpus: List[CPU]
         :param number_of_psus: The number_of_psus of this ServerCreate.  # noqa: E501
@@ -67,7 +67,7 @@ class ServerCreate(Model):
             'impact_assessment': ServerImpactAssessment,
             'rated_power': float,
             'total_cpu_sockets': int,
-            'exptected_lifetime': int,
+            'expected_lifetime': int,
             'installed_cpus': List[CPU],
             'number_of_psus': int,
             'total_installed_memory': int,
@@ -86,7 +86,7 @@ class ServerCreate(Model):
             'impact_assessment': 'impactAssessment',
             'rated_power': 'rated_power',
             'total_cpu_sockets': 'total_cpu_sockets',
-            'exptected_lifetime': 'exptected_lifetime',
+            'expected_lifetime': 'expected_lifetime',
             'installed_cpus': 'installed_cpus',
             'number_of_psus': 'number_of_psus',
             'total_installed_memory': 'total_installed_memory',
@@ -104,7 +104,7 @@ class ServerCreate(Model):
         self._impact_assessment = impact_assessment
         self._rated_power = rated_power
         self._total_cpu_sockets = total_cpu_sockets
-        self._exptected_lifetime = exptected_lifetime
+        self._expected_lifetime = expected_lifetime
         self._installed_cpus = installed_cpus
         self._number_of_psus = number_of_psus
         self._total_installed_memory = total_installed_memory
@@ -247,33 +247,31 @@ class ServerCreate(Model):
         self._total_cpu_sockets = total_cpu_sockets
 
     @property
-    def exptected_lifetime(self):
-        """Gets the exptected_lifetime of this ServerCreate.
+    def expected_lifetime(self):
+        """Gets the expected_lifetime of this ServerCreate.
 
         Expected lifetime of the server hardware  # noqa: E501
 
-        :return: The exptected_lifetime of this ServerCreate.
+        :return: The expected_lifetime of this ServerCreate.
         :rtype: int
         """
-        return self._exptected_lifetime
+        return self._expected_lifetime
 
-    @exptected_lifetime.setter
-    def exptected_lifetime(self, exptected_lifetime):
-        """Sets the exptected_lifetime of this ServerCreate.
+    @expected_lifetime.setter
+    def expected_lifetime(self, expected_lifetime):
+        """Sets the expected_lifetime of this ServerCreate.
 
         Expected lifetime of the server hardware  # noqa: E501
 
-        :param exptected_lifetime: The exptected_lifetime of this ServerCreate.
-        :type exptected_lifetime: int
+        :param expected_lifetime: The expected_lifetime of this ServerCreate.
+        :type expected_lifetime: int
         """
-        if exptected_lifetime is None:
-            raise ValueError("Invalid value for `exptected_lifetime`, must not be `None`")  # noqa: E501
-        if exptected_lifetime is not None and exptected_lifetime > 20:  # noqa: E501
-            raise ValueError("Invalid value for `exptected_lifetime`, must be a value less than or equal to `20`")  # noqa: E501
-        if exptected_lifetime is not None and exptected_lifetime < 1:  # noqa: E501
-            raise ValueError("Invalid value for `exptected_lifetime`, must be a value greater than or equal to `1`")  # noqa: E501
+        if expected_lifetime is not None and expected_lifetime > 20:  # noqa: E501
+            raise ValueError("Invalid value for `expected_lifetime`, must be a value less than or equal to `20`")  # noqa: E501
+        if expected_lifetime is not None and expected_lifetime < 1:  # noqa: E501
+            raise ValueError("Invalid value for `expected_lifetime`, must be a value greater than or equal to `1`")  # noqa: E501
 
-        self._exptected_lifetime = exptected_lifetime
+        self._expected_lifetime = expected_lifetime
 
     @property
     def installed_cpus(self):
